prevent text wrap

--- a/app/styles/patterns/_cards.css
+++ b/app/styles/patterns/_cards.css
@@ -22,6 +22,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    white-space: nowrap;
 
     background: $colorWhite;
     border-bottom: 1px solid $colorBorder;
